// Generated by sylk.build
syntax = "proto3";

package sylklabs.core;



message Config {

	sylklabs.core.NodeType node_type = 1;
	int32 num_workers = 2;
	int32 grpc_port = 3;
}


// The possible node types for proto tasker process
enum NodeType {
	SINGLE_PROCESS = 0;
	WORKER = 1;
	SCHEDULER = 2;
}